BUGFIX Fixed label positioning in CompositeFields for original language fields in translation mode (was shifted left before)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@69879 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -379,9 +379,11 @@ div.originallang_holder.field.CompositeField.nolabel {
 	font-style: italic;
 }
 
-.right form .field.CompositeField .originallang label.left {
+.right form .field.CompositeField .originallang label.left,
+.right form .field.CompositeField.originallang_holder label.left {
 	margin-left: 0;
 	width: auto;
+	float: none;
 }
 
 .right form div.field.CompositeField .originallang .middleColumn {
